--- a/app/src/main/res/drawable/button_1.xml
+++ b/app/src/main/res/drawable/button_1.xml
@@ -9,6 +9,8 @@
         android:width="36dp"
         android:height="50dp"/>
     <corners android:radius="10dp"/>
+    <solid
+        android:color="@color/yellow"/>
     <!--<solid
         android:color="#B0E0E6"/>-->
 </shape>
