--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/firstred"
     tools:context=".MainActivity">
 
     <TextView
@@ -14,7 +15,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="218dp"
         android:text="EARGENCY"
-        android:textColor="#0536C8"
+        android:textColor="@color/white"
         android:textSize="60sp"
         android:textStyle="bold|italic" />
 
@@ -25,7 +26,11 @@
         android:layout_gravity="center"
         android:layout_marginTop="100dp"
         android:background="@drawable/button_1"
-        android:text="STart" />
+        android:text="현재 위치"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+
+        />
 
 
 </LinearLayout>
